# traac

./: .gitignore  Cargo.toml  README.md  TO-DO.txt
src/: config.rs  error.rs  lastfm.rs  main.rs  mpris.rs
src/ui/: app.rs  application.rs  mod.rs  state.rs  types.rs  update.rs  view.rs
