[package]
name = "traac"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
iced_layershell = "0.18"
last-fm-rs = "20251214.0.2"
mpris = "2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5"
chrono = "0.4"
open = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1