[package]
name = "traac"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
iced_layershell = "0.18"
last-fm-rs = "20251214.0.2"
mpris = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5"
chrono = "0.4"
open = "5"
notify-rust = "4"
glob = "0.3.3"
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
